Updated README and removed App.jsx code

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>SayLess</title>
   </head>
-  <body style="background-color: lightskyblue;"></body>
+  <body style="background-color: rgb(219, 250, 135);"></body>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
