updated footer classnames to update the index.css from using nav to foot

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <body style="background-color: rgb(255, 255, 143);"></body>
   <body>
     <div id="root"></div>
+    <main></main>
     <script type="module" src="/src/main.jsx"></script>
   </body>
+  <footer class="footer"></footer>
 </html>
